<resources>
    <!-- Activity Names -->
    <string name="app_name">mood</string>
    <string name="welcome">Welcome</string>
    <string name="add_mood_log">Add Mood</string>
    <string name="add_activity">Add Activity</string>
    <string name="settings">Settings</string>
    <string name="customise">Customise</string>
    <string name="about">About</string>

    <!-- Welcome Activity -->
    <string name="welcome_text_p1">Welcome to mood</string>
    <string name="welcome_text_p2">The objective of this app is to allow you to quickly and conveniently log your mood at any time of the day. It will allow you to keep track of your mood profile over time and discover any trends and patterns that can be a first step toward making any improvements in everyday life</string>
    <string name="welcome_text_p3">mood will provide some tips on how to get started with its features, but first…</string>
    <string name="welcome_text_p4">What\'s your name?</string>

    <string name="welcome_submit_validation">Please enter a valid name (up to 15 alphabetical characters only)</string>

    <!-- Main Activity - Summary Tab -->
    <string-array name="time_period_array">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string-array name="graph_type_array">
        <item>Line</item>
        <item>Bar</item>
        <item>Pie</item>
    </string-array>

    <string-array name="mood_values">
        <item>Angry</item>
        <item>Sad</item>
        <item>Neutral</item>
        <item>Happy</item>
        <item>Great</item>
    </string-array>

    <string-array name="graph_daily_values">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thur</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <string name="summary_hint_title">Mood Charts</string>
    <string name="summary_hint_message">Hi %s! This is a view of your moods over time. You can choose the time period over which to show moods (above chart), and the visualisation method (below chart). To add your first mood, press the (+) button</string>

    <!-- View Tab -->
    <string name="locations">Locations</string>
    <string name="activities">Activities</string>

    <string name="view_hint_title">View Tab</string>
    <string name="view_hint_message">The View tab is where statistics will be shown for different moods and activities over the specified time range, according to your logged mood entries. The top pane allows you to view the locations and activities related to a given mood, and the bottom pane will show the moods related to a given activity</string>

    <string name="view_no_moods">No mood entries found for this time range and mood</string>

    <!-- Evaluate Tab -->
    <string name="evaluate_hint_title">Evaluate Tab</string>
    <string name="evaluate_hint_message">The Evaluate tab will show an evaluation of your logged mood entries, and attempt to give some advice based on positive and negative trends that it finds. This tab serves as a way to automatically evaluate your mood entries, so that you don\'t have to</string>

    <!-- Add Mood Log Activity -->
    <string name="feeling_text">How are you feeling?</string>
    <string name="mood_great">Great</string>
    <string name="mood_happy">Happy</string>
    <string name="mood_neutral">OK</string>
    <string name="mood_sad">Sad</string>
    <string name="mood_angry">Angry</string>

    <string name="activity_work">Work</string>
    <string name="activity_study">Study</string>
    <string name="activity_relax">Relaxing</string>
    <string name="activity_exercise">Exercise</string>
    <string name="activity_travel">Travel</string>
    <string name="activity_add_new">Add…</string>

    <string name="activity_text">What have you been up to recently?</string>

    <string name="add_mood_log_hint_title">Adding a mood log</string>
    <string name="add_mood_log_hint_message">This is where you can log a mood entry. Logging mood entries allows the app to keep track of your moods over time and visualise them, among other things. To add a mood log, select a mood type at the top and at least one activity that you had been involved in recently.
        \n\nMultiple activities can be selected, and you can also add your own by pressing the \'Add…\' button. To finalise the mood entry, press the finish button in the bottom right. Adding a mood entry will also store the location linked to the mood, so you may be asked to allow for this</string>

    <string name="add_mood_log_submit_validation">Select a mood and at least one activity</string>
    <string name="add_mood_log_submit_toast">Mood log added!</string>

    <!-- Add New Activity Activity -->
    <string name="new_activity_image_choice">Choose a suitable image</string>
    <string name="new_activity_name">Give it a name</string>
    <string name="new_activity_name_hint">Activity Name</string>

    <string name="add_new_activity_hint_title">Adding a new activity type</string>
    <string name="add_new_activity_hint_message">This screen allows you to create a new activity type. Select an icon to associate with the activity, give it a name and finish by pressing the finish button in the bottom right</string>

    <string name="add_new_activity_submit_validation_general">Select an icon and enter a valid name for the new activity</string>
    <string name="add_new_activity_submit_validation_already_exists">Activity name is already in use</string>
    <string name="add_new_activity_submit_toast">New activity created!</string>

    <!-- Settings Activity -->
    <string name="settings_reminders">Reminders</string>
    <string name="settings_time">Time:</string>
    <string name="settings_export">Export</string>
    <string name="settings_export_desc">Export entries to spreadsheet:</string>
    <string name="settings_more">More</string>
    <string name="settings_customise">Customise</string>
    <string name="settings_about">About</string>

    <string name="settings_hint_title">Settings</string>
    <string name="settings_hint_message">In settings, you can set reminders to notify you at a specific time each day to log your mood entry. You can also export your mood entries to a spreadsheet for use outside of the app, and further customisation options are available by pressing \'Customise\'</string>

    <!-- Customise Activity -->
    <string name="customise_personal">Personal</string>
    <string name="customise_name">Name:</string>
    <string name="customise_theme">Theme</string>
    <string name="theme_default">Default</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_ocean">Ocean</string>
    <string name="theme_mint">Mint</string>
    <string name="customise_accessibility">Accessibility</string>
    <string name="customise_large_font">Large Font:</string>

    <string name="customise_hint_title">Customise</string>
    <string name="customise_hint_message">On this screen, you can change the name that the app will refer to you as, and set a new visual theme for the app. Give it a shot!</string>

    <string name="customise_name_change_validation">Please enter a valid name (up to 15 alphabetical characters only)</string>
    <string name="customise_theme_change_toast">Theme changed.</string>
    <string name="customise_font_changed_toast">Font changed.</string>
    <string name="customise_changes_saved_toast">Changes saved.</string>

    <!-- About Activity -->
    <string name="about_team">The Team</string>
    <string name="about_team_desc">The team for this app consisted of a solo developer, Neil Browning. The app was created in Android Studio using Java as part of university coursework.</string>
    <string name="about_credits">Credits</string>
    <string name="about_credits_desc">Thanks to Icons8 for the free icons: https://icons8.com
        \n\nThanks to the MPAndroidChart project created by Philipp Jahoda for its charting capabilities: https://github.com/PhilJay/MPAndroidChart</string>

    <!-- Reminders -->
    <string name="reminder_title">Add a mood log</string>
    <string name="reminder_text">Hey %s! This is a set reminder to add a mood log</string>

</resources>
