<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- focusableInTouchMode so text field doesn't auto-focus -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/welcome_padding"
        android:paddingRight="@dimen/welcome_padding"
        android:paddingTop="@dimen/welcome_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/welcome_app_name_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/welcome_mood_icon_bottom_margin"
            android:layout_marginTop="@dimen/element_spacing_vertical"
            android:background="@drawable/welcome_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/welcome_paragraph_margin_vertical"
            android:gravity="center_horizontal"
            android:text="@string/welcome_text_p1"
            android:textSize="@dimen/welcome_paragraph_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/welcome_paragraph_margin_vertical"
            android:gravity="center_horizontal"
            android:text="@string/welcome_text_p2"
            android:textSize="@dimen/welcome_paragraph_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/welcome_paragraph_margin_vertical"
            android:gravity="center_horizontal"
            android:text="@string/welcome_text_p3"
            android:textSize="@dimen/welcome_paragraph_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/welcome_paragraph_margin_vertical"
            android:gravity="center_horizontal"
            android:text="@string/welcome_text_p4"
            android:textSize="@dimen/welcome_paragraph_text_size" />

        <EditText
            android:id="@+id/welcome_name_text"
            android:layout_width="@dimen/welcome_name_text_field_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_content_spacing"
            android:gravity="center_horizontal"
            android:inputType="textPersonName|textCapWords"
            android:shadowColor="@color/white"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/welcome_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/submit_button_bottom_margin"
            android:background="@drawable/welcome_finish" />

    </LinearLayout>

</ScrollView>