<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- focusableInTouchMode so text field doesn't auto-focus -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_content_all_margin"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/customise_section_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/nested_element_spacing_vertical_margin"
            android:background="@drawable/settings_section_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/text_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/customise_personal"
                    android:textSize="@dimen/title_text_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/name_section_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nested_scroll_view_bg"
                android:orientation="horizontal"
                android:padding="@dimen/text_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/customise_name"
                    android:textSize="@dimen/regular_text_size" />

                <EditText
                    android:id="@+id/name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="75dp"
                    android:inputType="textPersonName|textCapWords"
                    android:gravity="center" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/customise_section_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_section_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/text_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/customise_theme"
                    android:textSize="@dimen/title_text_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/theme_section_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nested_scroll_view_bg"
                android:orientation="horizontal"
                android:padding="@dimen/text_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/theme_default"
                    android:textSize="@dimen/regular_text_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/theme_section_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nested_scroll_view_bg"
                android:orientation="horizontal"
                android:padding="@dimen/text_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/theme_dark"
                    android:textSize="@dimen/regular_text_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/theme_section_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nested_scroll_view_bg"
                android:orientation="horizontal"
                android:padding="@dimen/text_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/theme_ocean"
                    android:textSize="@dimen/regular_text_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/theme_section_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nested_scroll_view_bg"
                android:orientation="horizontal"
                android:padding="@dimen/text_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/theme_mint"
                    android:textSize="@dimen/regular_text_size" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>