<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_content_spacing"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/about_section_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_section_spacing_vertical"
            android:background="@drawable/settings_section_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/text_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/about_team"
                    android:textSize="@dimen/title_text_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/about_nested_scroll_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nested_scroll_view_bg"
                android:orientation="horizontal"
                android:padding="@dimen/text_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/about_team_desc"
                    android:textSize="@dimen/regular_text_size" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_section_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_section_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/text_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/about_credits"
                    android:textSize="@dimen/title_text_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/about_nested_scroll_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nested_scroll_view_bg"
                android:orientation="horizontal"
                android:padding="@dimen/text_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/about_credits_desc"
                    android:textSize="@dimen/regular_text_size" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>